--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-12 09:31-0400\n"
-"PO-Revision-Date: 2018-04-12 09:18-0400\n"
+"POT-Creation-Date: 2018-04-18 22:23-0400\n"
+"PO-Revision-Date: 2018-04-19 21:27-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
@@ -14,593 +14,274 @@ msgstr ""
 "X-Generator: crowdin.com\n"
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: nl\n"
-"X-Crowdin-File: /plugins/oesenc_pi/po/oesenc_pi.pot\n"
-#
-msgid ""
-" could not be started.\n"
-"\n"
-msgstr ""
-" kon niet worden gestart.\n"
-"\n"
-#
-msgid "---<<< Warning:  Chart georef accuracy is poor. >>>---"
-msgstr ""
-#
+"X-Crowdin-File: /plugins/ofc_pi/po/ofc_pi.pot\n"
+
+#: src/chart.cpp:4095
 msgid "---<<< Warning:  Chart georef accuracy may be poor. >>>---"
-msgstr ""
-#
-msgid "Actions"
-msgstr "Acties"
-#
-#, fuzzy
-msgid "Activate Selected Chartset"
-msgstr "Herinstalleren gekozen kaart"
-#
-msgid "Activation succeeded.\n"
-msgstr ""
-#
-msgid "Available."
-msgstr ""
-#
-msgid "Cancel"
-msgstr "Annuleren"
-#
-msgid "Cancel Operation"
-msgstr "Bewerking annuleren"
-#
-#, fuzzy
-msgid "Cannot find the ofc server utility at \n"
-msgstr "Kan oserverd hulpmiddel niet vinden op \n"
-#
-msgid "Chart download cancelled."
-msgstr "Download geannuleeerd."
-#
-msgid "Chart installation complete."
-msgstr "Kaarten installatie voltooid."
-#
-msgid "Check your configuration and try again."
-msgstr "Controleer uw instellingen en probeer het opnieuw."
-#
-msgid "Check your connection and try again."
-msgstr "Controleer je verbinding en probeer het opnieuw."
-#
-msgid "Choose chart install location."
-msgstr "Kies kaart installatie plek."
-#
-#, fuzzy
-msgid "Contacting Fugawi Charts server..."
-msgstr "Contact maken met o-charts server..."
-#
-msgid "Dialog"
-msgstr "Dialoog"
-#
-#, fuzzy
-msgid "Download cancelled."
-msgstr "Download geannuleeerd."
-#
-msgid "Downloaded:  "
-msgstr "Gedownload:  "
-#
-msgid "Downloading chart:"
-msgstr ""
-#
-msgid "Downloading..."
-msgstr ""
-#
-msgid "Expired."
-msgstr "Verlopen."
-#
-#, fuzzy
+msgstr "---<<< Waarschuwing: nauwkeurigheid van de kaart kalibratie is mogelijk slecht. >>>---"
+
+#: src/chart.cpp:4178 src/chart.cpp:4242
+msgid "---<<< Warning:  Chart georef accuracy is poor. >>>---"
+msgstr "---<<< Waarschuwing: nauwkeurigheid van de kaart kalibratie is slecht. >>>---"
+
+#: src/ofc_pi.cpp:206 src/ofc_pi.cpp:232
 msgid "Fugawi Charts"
-msgstr "Mijn kaarten"
-#
-#, fuzzy
-msgid "Fugawi Charts PlugIn for OpenCPN"
-msgstr "oeSENC PlugIn voor OpenCPN"
-#
-#, fuzzy
-msgid ""
-"Fugawi Charts PlugIn for OpenCPN\n"
-"      Provides support of Fugawi Charts RNCs.\n"
-"\n"
-msgstr ""
-"PlugIn voor OpenCPN.\n"
-"Biedt ondersteuning voor oeSENC-kaarten.\n"
-"\n"
-#
-msgid "Fugawi server error: "
-msgstr ""
-#
-msgid "Install Selected Chart"
-msgstr "Installeren gekozen kaart"
-#
-#, fuzzy
-msgid "Install Selected Chartset"
-msgstr "Installeren gekozen kaart"
-#
+msgstr "Fugawi Kaarten"
+
+#: src/ofc_pi.cpp:212
+msgid "Fugawi.com Charts PlugIn for OpenCPN"
+msgstr "Fugawi.com kaarten plug-in voor OpenCPN"
+
+#: src/ofc_pi.cpp:218
+msgid "Fugawi Charts PlugIn for OpenCPN\n"
+"Provides support for Fugawi.com raster charts.\n\n"
+msgstr "Fugawi kaarten plug-in voor OpenCPN\n"
+"Biedt ondersteuning voor Fugawi.com raster kaarten.\n\n"
+
+#: src/ofc_pi.cpp:311
+msgid "Cannot find the ofc server utility at \n"
+msgstr "Kan het ofc-hulpprogramma niet vinden op \n"
+
+#: src/ofc_pi.cpp:315 src/ofc_pi.cpp:423 src/ofcShop.cpp:641
+#: src/ofcShop.cpp:660 src/ofcShop.cpp:989 src/ofcShop.cpp:2103
+#: src/ofcShop.cpp:2251 src/ofcShop.cpp:2451
+msgid "ofc_pi Message"
+msgstr "ofc_pi bericht"
+
+#: src/ofc_pi.cpp:418
+msgid "serverd utility at \n"
+msgstr "hulpprogramma op\n"
+
+#: src/ofc_pi.cpp:422
+msgid " could not be started.\n\n"
+msgstr " kon niet worden gestart.\n\n"
+
+#: src/ofcShop.cpp:391
+msgid "Available."
+msgstr "Beschikbaar."
+
+#: src/ofcShop.cpp:395
 msgid "Installed, Up-to-date."
 msgstr "Geïnstalleerd, Up-to-date."
-#
+
+#: src/ofcShop.cpp:399
 msgid "Installed, Update available."
 msgstr "Geïnstalleerd, maar Update beschikbaar."
-#
-msgid "Invalid Login."
-msgstr "Aanmeldgegevens ongeldig."
-#
-msgid "Invalid email name or password."
-msgstr ""
-#
-#, fuzzy
-msgid "Login to Fugawi Charts server"
-msgstr "Contact maken met o-charts server..."
-#
-msgid "My Charts"
-msgstr "Mijn kaarten"
-#
-msgid "OK"
-msgstr "OK"
-#
-msgid "Password:"
-msgstr "Wachtwoord:"
-#
+
+#: src/ofcShop.cpp:404
+msgid "Expired."
+msgstr "Verlopen."
+
+#: src/ofcShop.cpp:408
+msgid "Ready for download/install."
+msgstr "Klaar voor downloaden/installeren."
+
+#: src/ofcShop.cpp:412
 msgid "Please update Chart List."
 msgstr "Aub eerst kaarten lijst bijwerken."
-#
-msgid "Proceed?"
-msgstr "Doorgaan?"
-#
+
+#: src/ofcShop.cpp:416
 msgid "Ready for Activation Request."
-msgstr ""
-#
-msgid "Ready for download/install."
-msgstr ""
-#
-msgid "Refresh Chart List"
-msgstr ""
-#
-#, fuzzy
-msgid "Reinstall Selected Chartset"
-msgstr "Opnieuw installeren van gekozen kaart"
-#
-msgid "Status:"
-msgstr "Status:"
-#
-msgid "Status: "
-msgstr "Status: "
-#
-msgid "Status:  Activation FAILED."
-msgstr ""
-#
-#, fuzzy
-msgid "Status:  Cancelled."
-msgstr "Status: klaar"
-#
-msgid "Status: BZB download FAILED after retry."
-msgstr ""
-#
-msgid "Status: Chart List Refresh required."
-msgstr ""
-#
-msgid "Status: Communications error."
-msgstr "Status: Communicatiefout."
-#
-#, fuzzy
-msgid "Status: Downloading index file..."
-msgstr "Status: downloaden..."
-#
-msgid "Status: Downloading..."
-msgstr "Status: downloaden..."
-#
-msgid "Status: Error parsing GetAccount results."
-msgstr ""
-#
-msgid "Status: Error parsing index file..."
-msgstr ""
-#
-msgid "Status: Error parsing index.xml."
-msgstr ""
-#
-msgid "Status: Error reading GetAccount results."
-msgstr ""
-#
-msgid "Status: OK"
-msgstr "Status: OK"
-#
-msgid "Status: Ready"
-msgstr "Status: klaar"
-#
-#, fuzzy
-msgid "Status: Server unavailable."
-msgstr ""
-" rapporten niet beschikbaar.\n"
-"\n"
-#
-#, fuzzy
-msgid "This action will PERMANENTLY assign the chartset:"
-msgstr "Deze actie zal DEFINITIEF de kaart toewijzen:"
-#
-msgid "Unzipping chart files..."
-msgstr "Uitpakken kaart bestanden..."
-#
-#, fuzzy
-msgid "Update Selected Chartset"
-msgstr "Herinstalleren gekozen kaart"
-#
-msgid "You may now proceed to install the chartset"
-msgstr ""
-#
-msgid "email address:"
-msgstr ""
-#
+msgstr "Klaar voor de activeringsaanvraag."
+
+#: src/ofcShop.cpp:627
+msgid "Fugawi server error: "
+msgstr "Fugawi serverfout: "
+
+#: src/ofcShop.cpp:634
+msgid "Invalid email name or password."
+msgstr "Ongeldige gebruikersnaam of wachtwoord."
+
+#: src/ofcShop.cpp:637
+msgid "Check your configuration and try again."
+msgstr "Controleer uw instellingen en probeer het opnieuw."
+
+#: src/ofcShop.cpp:655
 msgid "internet communications error code: "
 msgstr "internet communicatie foutcode: "
-#
-#, fuzzy
-msgid "ofc_pi Message"
-msgstr "oeSENC_pi bericht"
-#
-#, fuzzy
-msgid "serverd utility at \n"
-msgstr "oeserverd hulpmiddel op\n"
-#
-#, fuzzy
+
+#: src/ofcShop.cpp:659
+msgid "Check your connection and try again."
+msgstr "Controleer je verbinding en probeer het opnieuw."
+
+#: src/ofcShop.cpp:682
+msgid "Invalid Login."
+msgstr "Aanmeldgegevens ongeldig."
+
+#: src/ofcShop.cpp:981
+msgid "This action will PERMANENTLY assign the chartset:"
+msgstr "Deze actie zal DEFINITIEF de kaartset toewijzen:"
+
+#: src/ofcShop.cpp:985
 msgid "to this system."
-msgstr "aan deze computer naam:"
-#
-#
-#~ msgid ""
-#~ "\n"
-#~ "\n"
-#~ " Fingerprint file is also copied to desktop."
-#~ msgstr ""
-#~ "\n"
-#~ "\n"
-#~ "Vingerafdrukbestand wordt ook naar bureaublad gekopieerd."
-#
-#
-#~ msgid " create a new System Name for this computer."
-#~ msgstr " maak een nieuwe naam voor deze computer."
-#
-#
-#~ msgid "A valid System Name is 3 to 15 characters in length."
-#~ msgstr "Een geldige naam heeft 3 tot 15 letters."
-#
-#
-#~ msgid ""
-#~ "A valid oeSENC UserKey has the alphanumeric format:  AAAA-BBBB-CCCC-DDDD-"
-#~ "EEEE-FF\n"
-#~ "\n"
-#~ "Your oeSENC UserKey may be obtained from your chart provider."
-#~ msgstr ""
-#~ "Een geldige oeSENC 'UserKey' heeft de alfanumerieke indeling: AAAA-BBBB-"
-#~ "CCCC-DDDD-EEEE-FF.\n"
-#~ "\n"
-#~ "U kunt een oeSENC 'UserKey' verkrijgen bij uw kaartenleverancier."
-#
-#
-#~ msgid "Accept"
-#~ msgstr "Accepteren"
-#
-#
-#~ msgid ""
-#~ "Administrator priveleges are required to copy fpr.\n"
-#~ "  Please try again...."
-#~ msgstr ""
-#~ "Administrator privileges zijn vereist voor het kopiëren van fpr.   Probeer "
-#~ "het opnieuw...."
-#
-#
-#~ msgid ""
-#~ "After creating this file, you will need it to obtain your User Key at the "
-#~ "o-charts.org shop.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Na het maken van dit bestand, dient u uw 'User Key' te genereren via de o-"
-#~ "charts.org webwinkel.\n"
-#~ "\n"
-#
-#
-#~ msgid "Assigment 1"
-#~ msgstr "Toewijzing 1"
-#
-#
-#~ msgid "Assigment 2"
-#~ msgstr "Toewijzing 2"
-#
-#
-#~ msgid "Available Chart sets:"
-#~ msgstr "Beschikbare kaartensets:"
-#
-#
-#~ msgid "Building eSENC"
-#~ msgstr "Maken van eSENC"
-#
-#
-#~ msgid "Chart Edition:"
-#~ msgstr "Kaart editie:"
-#
-#
-#~ msgid "Chart Edition: "
-#~ msgstr "Kaart editie: "
-#
-#
-#~ msgid "Chart download complete."
-#~ msgstr "Downloaden voltooid."
-#
-#
-#~ msgid "Chart download error, missing file."
-#~ msgstr "Kaart download fout, ontbrekende bestand."
-#
-#
-#~ msgid "Chart set"
-#~ msgstr "Kaartenfolio"
-#
-#
-#~ msgid "ChartTexts"
-#~ msgstr "Kaartteksten"
-#
-#
-#~ msgid "Checking oeserverd utility at "
-#~ msgstr "Controle oeserverd hulpprogramma op "
-#
-#
-#~ msgid "Continue waiting?"
-#~ msgstr "Blijven wachten?"
-#
-#
-#~ msgid "Could not open oesenc_pi EULA: "
-#~ msgstr "Niet geopend kon worden oesenc_pi EULA: "
-#
-#
-#~ msgid "Create System Identifier file..."
-#~ msgstr "Maak systeemidentificatiebestand ..."
-#
-#
-#~ msgid ""
-#~ "ERROR: The UserKey entered is not valid for this oeSENC chart set.\n"
-#~ "\n"
-#~ "oeSENC charts will be disabled for this session.\n"
-#~ "Please verify your UserKey and restart OpenCPN.\n"
-#~ "\n"
-#~ "Your oeSENC UserKey may be obtained from your chart provider.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "FOUT: De ingevoerde 'UserKey' is niet geldig voor dit oeSENC "
-#~ "kaartenfolio.\n"
-#~ "\n"
-#~ "oeSENC-kaarten worden uitgeschakeld voor deze sessie.\n"
-#~ "Controleer uw 'UserKey' en herstart OpenCPN.\n"
-#~ "\n"
-#~ "Een oeSENC 'UserKey' kunt u verkrijgen bij uw kaartleverancier.\n"
-#~ "\n"
-#
-#
-#~ msgid ""
-#~ "ERROR: The UserKey entered is not valid for this oeSENC chart set.\n"
-#~ "Please verify your UserKey and try again.\n"
-#~ "\n"
-#~ "A valid oeSENC UserKey has the alphanumeric format:  AAAA-BBBB-CCCC-DDDD-"
-#~ "EEEE-FF\n"
-#~ "Your oeSENC UserKey may be obtained from your chart provider.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "FOUT: De ingevoerde 'UserKey' is niet geldig voor dit oeSENC "
-#~ "kaartenfolio.\n"
-#~ "Controleer uw 'UserKey' en probeer het opnieuw.\n"
-#~ "\n"
-#~ "Een geldige oeSENC 'UserKey' heeft de alfanumerieke indeling: AAAA-BBBB-"
-#~ "CCCC-DDDD-EEEE-FF\n"
-#~ "U kunt een oeSENC 'UserKey' verkrijgen bij uw kaartenleverancier.\n"
-#~ "\n"
-#
-#
-#~ msgid "Enter New System Name"
-#~ msgstr "Voer computernaam in"
-#
-#
-#~ msgid "Enter UserKey"
-#~ msgstr "Voer 'UserKey' in"
-#
-#
-#~ msgid "Error extracting zip file"
-#~ msgstr "Fout bij het uitpakken van het zip-bestand"
-#
-#
-#~ msgid "Expiration date:"
-#~ msgstr "Vervaldatum:"
-#
-#
-#~ msgid "Expiration date: "
-#~ msgstr "Vervaldatum: "
-#
-#
-#~ msgid "Fingerprint file created.\n"
-#~ msgstr "Vingerafdrukbestand gemaakt.\n"
-#
-#
-#~ msgid "Installed edition: "
-#~ msgstr "Geïnstalleerde editie: "
-#
-#
-#~ msgid "License"
-#~ msgstr "Licentie"
-#
-#
-#~ msgid "Login to o-charts.org"
-#~ msgstr "Inloggen op o-charts.org"
-#
-#
-#~ msgid "New OpenCPN oeSENC System Name"
-#~ msgstr "Nieuwe OpenCPN oeSENC computernaam"
-#
-#
-#~ msgid "No symbols or spaces are allowed."
-#~ msgstr "Symbolen of spaties zijn niet toegestaan."
-#
-#
-#~ msgid "OpenCPN SENC UserKey Required"
-#~ msgstr "OpenCPN SENC 'UserKey' vereist"
-#
-#
-#~ msgid "OpenCPN oeSENC UserKey Required"
-#~ msgstr "OpenCPN: oeSENC 'UserKey' vereist"
-#
-#
-#~ msgid "Order Reference:"
-#~ msgstr "Bestellingreferentie:"
-#
-#
-#~ msgid "Order Reference: "
-#~ msgstr "Bestellingreferentie: "
-#
-#
-#~ msgid "PlugIn for OpenCPN oeSENC charts"
-#~ msgstr "PlugIn voor OpenCPN oeSENC-kaarten"
-#
-#
-#~ msgid "Preparing your charts..."
-#~ msgstr "Uw kaarten worden voorbereid..."
-#
-#
-#~ msgid "Proceed to create Fingerprint file?"
-#~ msgstr "Wilt u nu een vingerafdrukbestand maken?"
-#
-#
-#~ msgid "Proceed to install?"
-#~ msgstr "Doorgaan naar installeren?"
-#
-#
-#~ msgid "Purchase date:"
-#~ msgstr "Aankoopdatum:"
-#
-#
-#~ msgid "Purchase date: "
-#~ msgstr "Aankoopdatum: "
-#
-#
-#~ msgid "Ready for unzipping chart files."
-#~ msgstr "Klaar voor uitpakken van de kaart bestanden."
-#
-#
-#~ msgid "Reject"
-#~ msgstr "Afwijzen"
-#
-#
-#~ msgid "Sector angles are True Bearings from Seaward"
-#~ msgstr "Sectorrichtingen zijn ware peilingen vanaf zee"
-#
-#
-#~ msgid "Select OpenCPN/oeSENC System Name"
-#~ msgstr "Kies een OpenCPN oeSENC computernaam"
-#
-#
-#~ msgid "Select your System Name from the following list, or "
-#~ msgstr "Selecteer de naam van uw computer uit de volgende lijst, of "
-#
-#
-#~ msgid "Show In Finder"
-#~ msgstr "Toon In 'Finder'"
-#
-#
-#~ msgid "Show on disk"
-#~ msgstr "Reeds aanwezig"
-#
-#
-#~ msgid "System Identification"
-#~ msgstr "Systeemidentificatie"
-#
-#
-#~ msgid "System Name:"
-#~ msgstr "Computer naam:"
-#
-#
-#~ msgid "System Names"
-#~ msgstr "Computer namen"
-#
-#
-#~ msgid "System: "
-#~ msgstr "Computer: "
-#
-#
-#~ msgid ""
-#~ "The fingerprint file contains information to uniquely identifiy this "
-#~ "computer.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Het vingerafdrukbestand bevat informatie die deze computer identificeert.\n"
-#~ "\n"
-#
-#
-#~ msgid "The following Chart sets are available:"
-#~ msgstr "De volgende kaartenfolio's zijn beschikbaar:"
-#
-#
-#~ msgid "This file is also known as a\"fingerprint\" file.\n"
-#~ msgstr "Dit bestand wordt ook wel \"vingerafdrukbestand\" genoemd.\n"
-#
-#
-#~ msgid ""
-#~ "To obtain a User Key, you must generate a unique System Identifier File.\n"
-#~ msgstr ""
-#~ "Om een 'User Key' te verkrijgen, dient u een uniek "
-#~ "systeemidentificatiebestand te maken.\n"
-#
-#
-#~ msgid ""
-#~ "UserKey accepted.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "'UserKey' geaccepteerd.\n"
-#~ "\n"
-#
-#
-#~ msgid "Valid until"
-#~ msgstr "Geldig tot"
-#
-#
-#~ msgid "Version"
-#~ msgstr "Versie"
-#
-#
-#~ msgid "Visit o-charts.org Website"
-#~ msgstr "Bezoek de o-charts.org website"
-#
-#
-#~ msgid ""
-#~ "You may continue to wait, or return to this screen later to complete the "
-#~ "download."
-#~ msgstr ""
-#~ "U kunt blijven wachten, of later terug komen naar dit scherm voor het "
-#~ "uitvoeren van de download."
-#
-#
-#~ msgid "Your chart preparation is not complete."
-#~ msgstr "De voorbereiding van uw kaarten is niet kompleet."
-#
-#
-#~ msgid "lower case letters and numbers only."
-#~ msgstr "alleen kleine letters en cijfers."
-#
-#
-#~ msgid "new..."
-#~ msgstr "nieuw..."
-#
-#
-#~ msgid "o-charts API error code: "
-#~ msgstr "o-charts API foutcode: "
-#
-#
-#~ msgid "oeSENC"
-#~ msgstr "oeSENC"
-#
-#
-#~ msgid "oeSENC_PI Information"
-#~ msgstr "oeSENC_PI informatie"
-#
-#
-#~ msgid "oeSENC_PI Message"
-#~ msgstr "oeSENC_PI bericht"
-#
-#
-#~ msgid "oeSENC_PI Preferences"
-#~ msgstr "oeSENC_PI voorkeuren"
+msgstr "DEFINITIEF koppelen aan deze computer."
+
+#: src/ofcShop.cpp:987
+msgid "Proceed?"
+msgstr "Doorgaan?"
+
+#: src/ofcShop.cpp:1169
+msgid "Unzipping chart files..."
+msgstr "Uitpakken kaart bestanden..."
+
+#: src/ofcShop.cpp:1388 src/ofcShop.cpp:1495 src/ofcShop.cpp:3089
+#: src/ofcShop.cpp:3117
+msgid "Dialog"
+msgstr "Dialoogvenster"
+
+#: src/ofcShop.cpp:1459
+msgid "Status:"
+msgstr "Status:"
+
+#: src/ofcShop.cpp:1538
+msgid "Status: "
+msgstr "Status: "
+
+#: src/ofcShop.cpp:1678
+msgid "My Charts"
+msgstr "Mijn kaarten"
+
+#: src/ofcShop.cpp:1681
+msgid "Refresh Chart List"
+msgstr "De kaartenlijst vernieuwen"
+
+#: src/ofcShop.cpp:1700
+msgid "Actions"
+msgstr "Acties"
+
+#: src/ofcShop.cpp:1712
+msgid "Install Selected Chart"
+msgstr "Installeer de gekozen kaart"
+
+#: src/ofcShop.cpp:1715
+msgid "Cancel Operation"
+msgstr "Bewerking annuleren"
+
+#: src/ofcShop.cpp:1724
+msgid "Status: Chart List Refresh required."
+msgstr "Status: Update kaarten lijst nodig."
+
+#: src/ofcShop.cpp:1827 src/ofcShop.cpp:2423
+msgid "Contacting Fugawi Charts server..."
+msgstr "Contact maken met Fugawi kaart server..."
+
+#: src/ofcShop.cpp:1838 src/ofcShop.cpp:2434
+msgid "Status: Communications error."
+msgstr "Status: Communicatiefout."
+
+#: src/ofcShop.cpp:1845
+msgid "Status: Checking for updates."
+msgstr "Status: controleren voor updates."
+
+#: src/ofcShop.cpp:1852
+msgid "Status: Chartset index download failed."
+msgstr "Status: Kaartenset index download mislukt."
+
+#: src/ofcShop.cpp:1856 src/ofcShop.cpp:2247 src/ofcShop.cpp:2441
+msgid "Status: Ready"
+msgstr "Status: klaar"
+
+#: src/ofcShop.cpp:1933 src/ofcShop.cpp:2727
+msgid "Downloading index file"
+msgstr "Index-bestand downloaden"
+
+#: src/ofcShop.cpp:1933 src/ofcShop.cpp:2727
+msgid "Reading Index: "
+msgstr "Lezen van Index: "
+
+#: src/ofcShop.cpp:2042
+msgid "Status: Error parsing index.xml."
+msgstr "Status: Fout bij het analyseren van index.xml."
+
+#: src/ofcShop.cpp:2103
+msgid "Chart download cancelled."
+msgstr "Kaart download geannuleeerd."
+
+#: src/ofcShop.cpp:2121
+msgid "Status: Server unavailable."
+msgstr "Server is niet beschikbaar."
+
+#: src/ofcShop.cpp:2173
+msgid "Status: BZB download FAILED after retry."
+msgstr "Statuut: BZB downloaden mislukt na opnieuw proberen."
+
+#: src/ofcShop.cpp:2251
+msgid "Chart installation complete."
+msgstr "Kaarten installatie voltooid."
+
+#: src/ofcShop.cpp:2290
+msgid "Downloading chart:"
+msgstr "Download kaart:"
+
+#: src/ofcShop.cpp:2383
+msgid "Choose chart install location."
+msgstr "Kies kaart installatie plek."
+
+#: src/ofcShop.cpp:2392
+msgid "Status:  Cancelled."
+msgstr "Status: geannuleerd."
+
+#: src/ofcShop.cpp:2411
+msgid "Status:  Activation FAILED."
+msgstr "Status: Activering mislukt."
+
+#: src/ofcShop.cpp:2449
+msgid "Activation succeeded.\n"
+msgstr "Activering is geslaagd.\n"
+
+#: src/ofcShop.cpp:2450
+msgid "You may now proceed to install the chartset"
+msgstr "Je kunt nu overgaan tot het installeren van de kaartset"
+
+#: src/ofcShop.cpp:2465
+msgid "Status: Downloading..."
+msgstr "Status: downloaden..."
+
+#: src/ofcShop.cpp:2470
+msgid "Downloading..."
+msgstr "Downloaden..."
+
+#: src/ofcShop.cpp:2496 src/ofcShop.cpp:2521 src/ofcShop.cpp:2998
+msgid "Status: OK"
+msgstr "Status: OK"
+
+#: src/ofcShop.cpp:2650 src/ofcShop.cpp:2662
+msgid "Install Selected Chartset"
+msgstr "Installeer de gekozen kaart"
+
+#: src/ofcShop.cpp:2654
+msgid "Reinstall Selected Chartset"
+msgstr "Opnieuw installeren van gekozen kaart"
+
+#: src/ofcShop.cpp:2658
+msgid "Update Selected Chartset"
+msgstr "Bijwerken van de geselecteerde Chartset"
+
+#: src/ofcShop.cpp:2666
+msgid "Activate Selected Chartset"
+msgstr "Activeren van de geselecteerde kaartenset"
+
+#: src/ofcShop.cpp:3055
+msgid "Downloaded:  "
+msgstr "Gedownload:  "
+
+#: src/ofcShop.cpp:3136
+msgid "Login to Fugawi.com shop"
+msgstr "Log in op de Fugawi.com shop"
+
+#: src/ofcShop.cpp:3153
+msgid "email address:"
+msgstr "e-mailadres:"
+
+#: src/ofcShop.cpp:3160
+msgid "Password:"
+msgstr "Wachtwoord:"
+
+#: src/ofcShop.cpp:3170
+msgid "Cancel"
+msgstr "Annuleer"
+
+#: src/ofcShop.cpp:3173
+msgid "OK"
+msgstr "OK"
+
